plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id("com.github.johnrengelman.processes") version "0.5.0"
    id("org.springdoc.openapi-gradle-plugin") version "1.3.3"
}

group = 'com.boba'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
    runtimeOnly 'com.h2database:h2:1.4.200'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
    implementation 'org.thymeleaf:thymeleaf:3.0.12.RELEASE'
    implementation 'org.thymeleaf:thymeleaf-spring5:3.0.12.RELEASE'
    implementation 'org.springframework.boot:spring-boot-devtools:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.6'
    implementation 'org.springframework:spring-webmvc:5.3.12'
    implementation 'org.springframework.hateoas:spring-hateoas:1.3.5'
    implementation 'org.atteo:evo-inflector:1.3'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
    implementation 'org.springdoc:springdoc-openapi-hateoas:1.5.12'
    implementation 'org.springdoc:spring-boot-springdoc:3.1.2'
}

test {
    useJUnitPlatform()
}
